# slither-gym

./: README.md  demo.py  pyproject.toml
src/slither_gym/: __init__.py
src/slither_gym/core/: food.py  minimap.py  snake.py  spatial_hash.py  types.py  world.py
src/slither_gym/rl/: bot_policy.py  env_gym.py  env_parallel.py  obs_processor.py  reward.py  snake_cache.py  types.py
tests/: test_bot_policy.py  test_env_gym.py  test_env_parallel.py  test_food.py  test_obs_processor.py  test_performance.py  test_reward.py  test_snake.py  test_snake_cache.py  test_spatial_hash.py  test_world.py
